<resources>
    <!--  HOME  -->
    <string name="app_name">projectMarketplace</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="sell">Sell your item</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="apptitle">ARKETPLACE</string>

    <string name="title">Title</string>
    <string name="slogan">Find your product…</string>
    <string name="items_list_description">List of products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  FILTERING -->
    <string-array name="filter_options">
        <item>Default</item>
        <item>Newest first</item>
        <item>Price: low to high</item>
        <item>Price: high to low</item>
    </string-array>

    <!--  ITEM INPUTS -->
    <string name="price_format">%1$.2f $</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="add_item">Add item</string>
    <string name="back">back</string>
    <string name="logo">logo</string>

    <!-- INDIVIDUAL ITEMS -->
    <string name="image">image</string>
    <string name="seller">Seller:</string>
    <string name="name">Name</string>
    <string name="price_input">Price:</string>
    <string name="value">Value</string>
    <string name="contact_seller">Contact seller</string>
    <string name="buy_now">Buy now</string>
    <string name="brand_input">Brand:</string>
    <string name="some_brand">Some brand</string>
    <string name="description_input">Description:</string>
    <string name="about_this_item">About this item.</string>
    <string name="condition_input">Condition:</string>
    <string name="new_used">New/used</string>
    <string name="color_input">Color:</string>

    <!-- PROFILE  -->
    <string name="my_orders">My orders</string>
    <string name="email">email</string>
    <string name="reviews">Reviews</string>
    <string name="delete_account">Delete account</string>
    <string name="favorite_items">Favorite items</string>
    <string name="log_out">Log out</string>

    <!-- SEARCH  -->
    <string name="search_hint">Search...</string>
    <string name="recycle">recycle</string>
    <string name="electronics">Electronics</string>
    <string name="accessories">Accessories</string>
    <string name="vehicles">Vehicles</string>
    <string name="no_search_results">No search results.</string>
    <string name="text">Text</string>
    <string name="time">time</string>
    <string name="date">date</string>

    <!-- MY ORDERS  -->
    <string name="purchased">Purchased:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="default_web_client_id">129783984142-62gg3tba9a7vdhua5lru6ftmtdr22oo9.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in with Google</string>

    <!-- MY ORDERS  -->
    <string name="type_message">Type a message</string>
    <string name="send">Send</string>

    <!-- FAVORITES  -->
    <string name="heart">heart</string>
    <string name="ratingTo">"Rate seller: "</string>
    <string name="your_review">Your review...</string>
    <string name="submit">Submit</string>

    <string name="default_notification_channel_id">notification_channel</string>
    <string name="fullscreen_image">Fullscreen product image</string>
    <string name="close">Close</string>
    <string name="my_items">My items</string>
    <string name="delete_item">Delete</string>
    <string name="review_for_item">Review for item:</string>
    <string name="save">Save</string>
    <string name="set_location">Set location 🌍</string>
    <string name="removeImage">remove image</string>
    <string name="selectImage">select image</string>
    <string name="imagePreview">imagePreview</string>
    <string name="located_in">Located in</string>
    <string name="not_found">not found</string>
    <string name="item_location">Item location:</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="map">map</string>
    <string name="geo_search">Geo search</string>
    <string name="distance_km">10 km</string>
    <string name="radius_search">Radius</string>
    <string name="recomended_items">Recommended items</string>
    <string name="all_items">All items</string>
    <string name="all_other_articles">All other items</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="image_search">Image search</string>
    <string name="date_text">Date:</string>
</resources>
