<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.AddFragment"
    android:id="@+id/add">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/sell"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- NASLOV -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- OPIS -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- KATEGORIJA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/category"
        android:labelFor="@+id/categoryInput">

        <AutoCompleteTextView
            android:id="@+id/categoryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:importantForAccessibility="yes"
            android:focusable="true"
            android:clickable="true"
            tools:text="Select category" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- STANJE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conditionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/categoryInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/condition"
        android:labelFor="@+id/conditionInput">

        <AutoCompleteTextView
            android:id="@+id/conditionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:importantForAccessibility="yes"
            android:focusable="true"
            android:clickable="true"
            tools:text="Select condition" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- BREND -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brandInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/conditionInputLayout"
        app:layout_constraintStart_toStartOf="@id/conditionInputLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/brandInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- BOJA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/colorInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/brandInputLayout"
        app:layout_constraintStart_toStartOf="@id/brandInputLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CIJENA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/colorInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- SLIKE -->
    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagePreview"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintTop_toBottomOf="@id/priceInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/removeImageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_close"
        android:background="@drawable/circle_background"
        android:visibility="gone"
        android:contentDescription="@string/removeImage"
        app:layout_constraintTop_toTopOf="@id/imagePreview"
        app:layout_constraintEnd_toEndOf="@id/imagePreview"
        android:layout_marginTop="-8dp"
        android:layout_marginEnd="-8dp"/>

    <ImageButton
        android:id="@+id/selectImageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/selectImage"
        android:src="@drawable/ic_add2"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="@id/imagePreview"
        app:layout_constraintBottom_toBottomOf="@id/imagePreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- LOKACIJA -->
    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_location"
        android:backgroundTint="@color/button4"
        app:layout_constraintTop_toBottomOf="@id/imagePreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- GUMB -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@id/locationButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

