<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="186dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="4dp"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    android:background="@drawable/bg_container"
    android:elevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:riv_corner_radius="6dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>