<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <!-- BACK TOOLBAR -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@drawable/bg_container3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="64dp"
            android:layout_marginTop= "64dp"
            android:text="@string/category"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

    </androidx.appcompat.widget.Toolbar>

    <!-- FILTRIRANJE -->
    <Spinner
        android:id="@+id/filtering"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_goneMarginTop="112dp"
        />

    <!-- Geo search -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_container6"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/radiusLayout"
        app:layout_constraintTop_toBottomOf="@id/filtering">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius_search"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"/>

        <SeekBar
            android:id="@+id/radiusSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="90"
            android:progress="10"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/radiusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_km"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <ImageButton
        android:id="@+id/radiusSearchButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_location"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_container7"
        android:contentDescription="@string/geo_search"
        app:layout_constraintBottom_toBottomOf="@id/filtering"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>


    <!-- PRIKAZ PROIZVODA -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginBottom="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiusLayout"
        android:contentDescription="@string/recycle"
        />


    <TextView
        android:id="@+id/noResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_search_results"
        android:layout_marginBottom="128dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>